fix clickable area on off screen nav with rotate effect

--- a/scss/modules/off-screen-nav.scss
+++ b/scss/modules/off-screen-nav.scss
@@ -209,4 +209,9 @@
     transform-origin: 0 50%;
     transition: 0.5s;
   }
+
+  ~ .effeckt-overlay {
+    z-index:900;
+    visibility: visible;
+  }
 }
